add area load parameter  to search trajectory from db